--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Домашняя страница</title>
-  <!-- Подключение шрифта Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-  <!-- Подключение внешнего CSS -->
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -17,7 +15,8 @@
         <li><a href="#about">Обо мне</a></li>
         <li><a href="#gallery">Галерея</a></li>
         <li><a href="#table">Таблица</a></li>
-        <li><a href="#contacts">Контакты</a></li>
+        <li><a href="#feedback">Обратная связь</a></li>
+        <li><a href="#auth">Аутентификация</a></li>
       </ul>
     </nav>
   </header>
@@ -30,36 +29,92 @@
 
     <section id="gallery">
       <h2>Галерея</h2>
-      <p>Здесь раздел "Галерея"</p>
-      <img src="images\picture.webp" alt="Изображение">
+      <div class="gallery-container">
+    <img src="images/picture.webp" alt="Изображение">
+      </div>
     </section>
 
     <section id="table">
       <h2>Таблица</h2>
-      <p>Здесь раздел "Таблица"</p>
       <table>
         <tr>
-          <th>Заголовок 1</th>
+          <th>Языки программирования</th>
           <th>Заголовок 2</th>
           <th>Заголовок 3</th>
         </tr>
-        <tr>
-          <td>-</td>
-          <td>-</td>
-          <td>-</td>
-        </tr>
-        <tr>
-          <td>-</td>
-          <td>-</td>
-          <td>-</td>
-        </tr>
+        <tr><td>C++</td><td>-</td><td>-</td></tr>
+        <tr><td>HTML</td><td>-</td><td>-</td></tr>
       </table>
+    </section>
+
+    
+    <section id="feedback">
+      <h2>Форма обратной связи</h2>
+      <form action="https://httpbin.org/post" method="POST" enctype="multipart/form-data" class="feedback-form">
+        <label>ФИО:<br>
+          <input type="text" name="fio" required>
+        </label>
+
+        <label>Email:<br>
+          <input type="email" name="email" required>
+        </label>
+
+        <fieldset>
+          <legend>Откуда вы узнали о нас?</legend>
+          <label><input type="radio" name="source" value="internet"> Интернет</label>
+          <label><input type="radio" name="source" value="friends"> Друзья</label>
+          <label><input type="radio" name="source" value="ads"> Реклама</label>
+        </fieldset>
+
+        <label>Тип обращения:<br>
+          <select name="type">
+            <option value="complaint">Жалоба</option>
+            <option value="suggestion">Предложение</option>
+          </select>
+        </label>
+
+        <label>Текст сообщения:<br>
+          <textarea name="message" rows="5" required></textarea>
+        </label>
+
+        <label>Вложение:<br>
+          <input type="file" name="file">
+        </label>
+
+        <label class="consent">
+          <input type="checkbox" name="consent" required> Даю согласие на обработку персональных данных
+        </label>
+
+        <button type="submit">Отправить</button>
+      </form>
+    </section>
+
+    
+    <section id="auth" class="auth-section">
+      <div class="auth-container">
+        <form action="https://httpbin.org/post" method="POST" class="auth-form">
+          <h2>Вход в систему</h2>
+          <label>Логин:<br>
+            <input type="text" name="login" required>
+          </label>
+
+          <label>Пароль:<br>
+            <input type="password" name="password" required>
+          </label>
+
+          <label class="remember">
+            <input type="checkbox" name="remember"> Запомнить меня
+          </label>
+
+          <button type="submit">Войти</button>
+        </form>
+      </div>
     </section>
   </main>
 
   <footer id="contacts">
     <h2>Контакты</h2>
-    <p><a href="error@mail.ru">error@mail.ru</a></p>
+    <p><a href="mailto:error@mail.ru">error@mail.ru</a></p>
     <p>&copy; 2025</p>
   </footer>
 
