--- a/site.html
+++ b/site.html
@@ -1,3 +1,4 @@
+<<!-- Обновленный site.html (добавлена ссылка в nav) -->
 <!DOCTYPE html>
 <html lang="ru">
 <head>
@@ -20,7 +21,8 @@
   <nav>
     <ul>
       <li><a href="site.html" class="active">Главная</a></li>
-      <li><a href="lunch.html">Сделать заказ</a></li>
+      <li><a href="lunch.html">Собрать ланч</a></li>
+      <li><a href="order.html">Оформить заказ</a></li>
       <li><a href="#about">Обо мне</a></li>
       <li><a href="#gallery">Галерея</a></li>
       <li><a href="#table">Таблица</a></li>
