--- a/lunch.html
+++ b/lunch.html
@@ -62,13 +62,10 @@
   <nav>
     <ul>
       <li><a href="site.html">Главная</a></li>
-      <li><a href="lunch.html" class="active">Собрать ланч</a></li>
-      <li><a href="order.html">Оформить заказ</a></li>
-      <li><a href="site.html#about">Обо мне</a></li>
-      <li><a href="site.html#gallery">Галерея</a></li>
-      <li><a href="site.html#table">Таблица</a></li>
-      <li><a href="site.html#feedback">Обратная связь</a></li>
-      <li><a href="site.html#auth">Аутентификация</a></li>
+    <li><a href="lunch.html">Собрать ланч</a></li>
+    <li><a href="order.html">Оформить заказ</a></li>
+    <li><a href="orders.html">Заказы</a></li> <li><a href="site.html#about">Обо мне</a></li>
+
     </ul>
   </nav>
 </header>
