--- a/lunch.html
+++ b/lunch.html
@@ -72,9 +72,18 @@
 
 <main>
   <section class="combo-showcase">
-    <h2>Ваши Комбо-наборы</h2>
-    <p>Выберите блюда в заказе, и мы покажем, какие комбо вы собрали!</p>
-    <div id="combo-boxes-container" class="combo-grid"></div>
+    <h2 class="section-title">Доступные для заказа комбо</h2>
+    
+    <div id="combo-display" class="combo-display-container"></div>
+    
+    <div class="dessert-info">
+        <div class="combo-icon-wrapper" id="dessert-icon-status">
+            </div>
+        <p class="dessert-text">
+            Десерт<br>
+            <span class="small">(Можно добавить к любому заказу)</span>
+        </p>
+    </div>
   </section>
 
   <!-- Остальные секции как у тебя были -->
